<resources>
    <string name="email">Email_id</string>
    <string name="name">Full Name</string>
    <string name="mobile_number">+919876543210</string>
    <string name="aadhar_number">5457 1421 5421</string>
    <string name="address">51-Bakers Street London England</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">LOGOUT</string>
    <string name="todo">TODO</string>
    <string name="app_name">KANGAROO ROOMS</string>
    <string name="verify_info_1">A 6-Digit Verification Code will be sent via SMS\n
    to verify your mobile number</string>
    <string name="verify_info_2">No Verification Code required for Login</string>
    <string name="agree">By creating account, I agree to KANGAROO ROOMS\'s
    <![CDATA[<br><font color="#E53935">Terms and Conditions</font> and <font color="#E53935">Privacy Policy</font>]]></string>
    <string name="dent_allow_sms">Allow <b>kangaroo rooms</b> to send and view SMS
        messages?</string>
    <string name="deny_sms">To auto detect OTP,please provide\n
        permission to read SMS. </string>
    <string name="saved_hotel_txt_2">Click on the </string>
    <string-array name="countries_list">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
    </string-array>
    <string-array name="countries_code_list">
        <item>+93</item>
        <item>+355</item>
        <item>+213</item>
        <item>+1684</item>
        <item>+376</item>
        <item>+244</item>
        <item>+1264</item>
        <item>+1268</item>
        <item>+54</item>
        <item>+374</item>
        <item>+297</item>
        <item>+43</item>
        <item>+994</item>
        <item>+1</item>
        <item>+973</item>
        <item>+880</item>
        <item>+1246</item>
        <item>+375</item>
        <item>+32</item>
        <item>+501</item>
    </string-array>
    <string-array name="places_in_india">
        <item>Agartala</item>
        <item>Agra</item>
        <item>Agumbe</item>
        <item>Ahmedabad</item>
        <item>Aizawl</item>
        <item>Ajmer</item>
        <item>Alappuzha Beach</item>
        <item>Allahabad</item>
        <item>Alleppey</item>
        <item>Almora</item>
        <item>Amarnath</item>
        <item>Amritsar</item>
        <item>Anantagir</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Araku valley</item>
        <item>Aurangabad</item>
        <item>Ayodhya</item>
        <item>Badrinath</item>
        <item>Bangalore</item>
        <item>Baroda</item>
        <item>Bastar</item>
        <item>Bhagalpur</item>
        <item>Bhilai</item>
        <item>Bhimtal</item>
        <item>Bhopal</item>
        <item>Bhubaneswar</item>
        <item>Bhuj</item>
        <item>Bidar</item>
        <item>Bilaspur</item>
        <item>Bodh Gaya</item>
        <item>Calicut</item>
        <item>Chail</item>
        <item>Chamba</item>
        <item>Chandigarh</item>
        <item>Chennai</item>
        <item>Chennai Beaches</item>
        <item>Cherai</item>
        <item>Cherrapunji</item>
        <item>Chidambaram</item>
        <item>Chikhaldara Hills</item>
        <item>Chopta</item>
        <item>Coimbatore</item>
        <item>Coonoor</item>
        <item>Coorg</item>
        <item>Corbett National Park</item>
        <item>Cotigao Wild Life Sanctuary</item>
        <item>Cuttack</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Dalhousie</item>
        <item>Daman and Diu</item>
        <item>Darjeeling</item>
        <item>Dehradun</item>
        <item>Delhi</item>
        <item>Devikulam</item>
        <item>Dhanaulti</item>
        <item>Dharamashala</item>
        <item>Dindigul</item>
        <item>Dudhwa National Park</item>
        <item>Dwaraka</item>
        <item>Faridabad</item>
        <item>Gandhinagar</item>
        <item>Gangotri</item>
        <item>Gangtok</item>
        <item>Gir Wildlife Sanctuary</item>
        <item>Goa</item>
        <item>Great Himalayan National Park</item>
        <item>Gulmarg</item>
        <item>Gurgaon</item>
        <item>Guruvayoor</item>
        <item>Guwahati</item>
        <item>Gwalior</item>
        <item>Hampi</item>
        <item>Haridwar</item>
        <item>Hogenakkal</item>
        <item>Horsley Hills</item>
        <item>Hyderabad</item>
        <item>Idukki</item>
        <item>Imphal</item>
        <item>Indore</item>
        <item>Itangar</item>
        <item>Jabalpur</item>
        <item>Jaipur</item>
        <item>Jaisalmer</item>
        <item>Jalandhar</item>
        <item>Jammu</item>
        <item>Jamshedpur</item>
        <item>Jodhpur</item>
        <item>Kanchipuram</item>
        <item>Kanha National Park</item>
        <item>Kanpur</item>
        <item>Kanyakumari</item>
        <item>Kargil</item>
        <item>Karwar</item>
        <item>Kausani</item>
        <item>Kedarnath</item>
        <item>Keoladeoghana National Park</item>
        <item>Khajuraho</item>
        <item>Kochi</item>
        <item>Kodaikanal</item>
        <item>Kolkata</item>
        <item>Kollam</item>
        <item>Konark</item>
        <item>Kotagiri</item>
        <item>Kottakkal and Ayurveda</item>
        <item>Kovalam</item>
        <item>Kovalam and Ayurveda</item>
        <item>Kudremukh</item>
        <item>Kullu</item>
        <item>Kumaon</item>
        <item>Kumarakom</item>
        <item>Kumarakom and Ayurveda</item>
        <item>Kumarakom Bird Sanctuary</item>
        <item>Kurukshetra</item>
        <item>Lakshadweep</item>
        <item>Lucknow</item>
        <item>Ludhiana</item>
        <item>Madurai</item>
        <item>Mahabalipuram</item>
        <item>Malpe Beach</item>
        <item>Manas National Park</item>
        <item>Mangalore</item>
        <item>Maravanthe Beach</item>
        <item>Margoa</item>
        <item>Mount Abu</item>
        <item>Mumbai</item>
        <item>Munnar</item>
        <item>Mussoorie</item>
        <item>Mysore</item>
        <item>Nahsik</item>
        <item>Nalanda</item>
        <item>Nanda Devi National Park</item>
        <item>Nandi Hills</item>
        <item>Netravali Wild Life Sanctuary</item>
        <item>Ooty</item>
        <item>Orchha</item>
        <item>Pahalgam</item>
        <item>Palakkad</item>
        <item>Panchgani</item>
        <item>Patna</item>
        <item>Patnitop</item>
        <item>Pattadakkal</item>
        <item>Periyar Wildlife Sanctuary</item>
        <item>Pithoragarh</item>
        <item>Pondicherry</item>
        <item>Pune</item>
        <item>Puri</item>
        <item>Pushkar</item>
        <item>Raipur</item>
        <item>Rajaji National Park</item>
        <item>Rajgir</item>
        <item>Rameshwaram</item>
        <item>Ranchi</item>
        <item>Ranganthittu Bird Sanctuary</item>
        <item>Ranikhet</item>
        <item>Ranthambore</item>
        <item>Rishikesh</item>
        <item>Rourkela</item>
        <item>Sanchi</item>
        <item>Saputara</item>
        <item>Sariska Wildlife Sanctuary</item>
        <item>Shillong</item>
        <item>Shimla</item>
        <item>Sohna_Hills</item>
        <item>Srinagar</item>
        <item>Sunderbans</item>
        <item>Surat</item>
        <item>Tezpur</item>
        <item>Thanjavur</item>
        <item>Thiruvananthapuram</item>
        <item>Thrissur</item>
        <item>Tirunelveli</item>
        <item>Tirupati</item>
        <item>Trichy</item>
        <item>Udaipur</item>
        <item>Ujjain</item>
        <item>Vaishali</item>
        <item>Valley of Flowers</item>
        <item>Varanasi</item>
        <item>Varkala and Ayurveda</item>
        <item>Vijayawada</item>
        <item>Vishakhapatnam</item>
        <item>Vrindhavan</item>
        <item>Warangal</item>
        <item>Wayanad</item>
        <item>Wayanad Wildlife Sanctuary</item>
        <item>Yercaud</item>
        <item>Zanskar</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel_speciality">Fulfill your apetite at Bakasur with their scrumptious \n buffet</string>
    <string name="instruction_two">Couples are welcome</string>
    <string name="guest_policy">By proceeding, you agree to our
    <![CDATA[<font color="#FF0000">Guest Policies</font>]]></string>
    <string name="trade_name">This ROOM is serviced under the trade name and as per quality staandards of KANGAROO ROOMS</string>
    <string name="instruction_one">Guest can check in using any local or outstation ID\nproof (PAN card not accepted).</string>
    <string name="test">Extra matress will be provided for triple occupancy bookings</string>
    <string-array name="room_ids">
        <item>2201</item>
        <item>2202</item>
        <item>2203</item>
        <item>2204</item>
        <item>2205</item>
        <item>2206</item>
        <item>2207</item>
        <item>2208</item>
        <item>2209</item>
        <item>2210</item>
        <item>2211</item>
        <item>2212</item>
        <item>2213</item>
        <item>2214</item>
        <item>2215</item>
        <item>2216</item>
        <item>2217</item>
        <item>2218</item>
        <item>2219</item>
        <item>2220</item>
        <item>2221</item>
        <item>2222</item>
        <item>2223</item>
        <item>2224</item>
        <item>2225</item>
        <item>2226</item>
        <item>2227</item>
        <item>2228</item>
        <item>2229</item>
        <item>2230</item>
        <item>2231</item>
        <item>2232</item>
        <item>2233</item>
        <item>2234</item>
        <item>2235</item>
        <item>2236</item>
        <item>2237</item>
        <item>2238</item>
        <item>2239</item>
        <item>2240</item>
        <item>2241</item>
        <item>2242</item>
        <item>2243</item>
        <item>2244</item>
        <item>2245</item>
        <item>2246</item>
        <item>2247</item>
        <item>2248</item>
        <item>2249</item>
        <item>2250</item>
        <item>2251</item>
        <item>2252</item>
        <item>2253</item>
        <item>2254</item>
        <item>2255</item>
        <item>2256</item>
        <item>2257</item>
        <item>2258</item>
        <item>2259</item>
        <item>2260</item>
        <item>2261</item>
        <item>2262</item>
        <item>2263</item>
        <item>2264</item>
        <item>2265</item>
        <item>2266</item>
        <item>2267</item>
        <item>2268</item>
        <item>2269</item>
        <item>2270</item>
        <item>2271</item>
        <item>2272</item>
        <item>2273</item>
        <item>2274</item>
        <item>2275</item>
        <item>2276</item>
        <item>2277</item>
        <item>2278</item>
        <item>2279</item>
        <item>2280</item>
        <item>2281</item>
        <item>2282</item>
        <item>2283</item>
        <item>2284</item>
        <item>2285</item>
        <item>2286</item>
        <item>2287</item>
        <item>2288</item>
        <item>2289</item>
        <item>2290</item>
        <item>2291</item>
        <item>2292</item>
        <item>2293</item>
        <item>2294</item>
        <item>2295</item>
        <item>2296</item>
        <item>2297</item>
        <item>2298</item>
        <item>2299</item>
        <item>2300</item>
    </string-array>
</resources>