<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="e5e5e5"
            android:orientation="vertical"
            android:id="@+id/linear_layout1">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp">


                <com.github.abdularis.civ.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/imgView"
                    app:srcCompat="@drawable/icon_aadharnumber"
                    app:highlightColor="#80fb1743"
                    app:strokeColor="@color/colorAccent"
                    app:strokeWidth="2px" />


                <Button
                    android:layout_width="35dp"
                    android:id="@+id/buttonLoadPicture"
                    android:layout_height="35dp"
                    android:layout_alignBottom="@+id/imgView"
                    android:layout_alignRight="@+id/imgView"
                    android:layout_alignEnd="@+id/imgView" />
            </RelativeLayout>

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:text="@string/name"
                android:textColor="#000"
                android:textSize="21sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:text="@string/email"
                android:textColor="#000"
                android:textSize="21sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:id="@+id/linear_layout2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:layout_margin="5dp"
                android:paddingStart="20dp">


                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/icon_mobile" />

                <EditText
                    android:id="@+id/mobile_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:enabled="false"
                    android:paddingLeft="10dp"
                    android:text="@string/mobile_number"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:layout_margin="5dp"
                android:paddingStart="20dp">


                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/icon_aadharnumber" />

                <EditText
                    android:id="@+id/aadhar_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:enabled="false"
                    android:paddingLeft="10dp"
                    android:text="@string/aadhar_number"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:layout_margin="5dp"
                android:paddingStart="20dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/icon_address" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:enabled="false"
                    android:paddingLeft="10dp"
                    android:text="@string/address"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:layout_margin="5dp"
                android:paddingStart="20dp">


                <Button
                    android:id="@+id/edit_profile"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/profile_button"
                    android:text="@string/edit_profile"
                    android:textColor="#000" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>